--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-Hello there
+<html> 
+
+<head>
+
+<title>СОКЛОС "Охотник"</title>
+
+<meta name="description" content="Саратовский областной клуб любителей охотничьих собак ОХОТНИК" />
+
+<meta name="keywords" content="охота, охотник, собаки, легавые, саратов, клуб, испытания" />
+
+<meta name="verify-v1" content="nx8x+G1+f0o8+x/pNEnYP0d0TRHev0875mBrXHaQzJM=" />
+
+<link rel="stylesheet" type="text/css" href="http://soklos-ohotnik.narod.ru/style.css" />
+
+<script>onload=function(){return false}</script>
+</head>
+
+<body class="undiv" style="margin: 0px; padding: 0px; background-color: #999999;">
+
+
+
+
+
+<table class="main"  cellspacing="0" cellpadding="0"  align="center" height="100%">
+
+<tr>
+
+	<td colspan=2 class="topcorner" style="color: #00ab00; background:url('img/bb_left.png') no-repeat center;">Саратовский Областной Клуб</td>
+
+	<td rowspan=5 class="logo"><a href="/"><img src="http://soklos-ohotnik.narod.ru/img/logo.jpg" border="0" alt="logo, go to main page"></a></td>
+
+	<td colspan=2 class="topcorner" style="color: #00ab00; background:url('img/bb_right.png') no-repeat center;">Любителей Охотничьих Собак</td>
+
+</tr>
+
+<tr>
+
+	<td colspan=2 class="single" style="height: 104px; background:url('img/left_bg.jpg') no-repeat center;"></td>
+
+	<td colspan=2 class="single" style="height: 104px; background:url('img/right_bg.jpg') no-repeat center;"></td>
+
+</tr>
+
+<tr>
+
+	<td colspan=2 class="single" style="height: 20px; background:url('img/bb_left.png') no-repeat center;"></td>
+
+	<td colspan=2 class="single" style="height: 20px; background:url('img/bb_right.png') no-repeat center;"></td>
+
+</tr>
+
+<tr>
+
+	<td colspan=2 class="single" style="height: 30px; background: #003f00;" align="right">
+
+		<div class="button" style="float: right;"><span><a href="http://soklos-ohotnik.narod.ru/hunting.html" target="contentframe" id="button">ОХОТА</a></span></div>
+
+		<div class="button" style="float: right;"><span><a href="http://soklos-ohotnik.narod.ru/home.html#news" target="contentframe" id="button">НОВОСТИ</a></span></div>
+
+		<div class="button" style="float: right;"><span><a href="http://soklos-ohotnik.narod.ru/about.html" target="contentframe" id="button" title="О клубе / О руководителях / Контакты">О КЛУБЕ</a></span></div>
+
+		<div class="button" style="float: right;"><span><a href="http://soklos-ohotnik.narod.ru/home.html" target="contentframe" id="button">ГЛАВНАЯ</a></span></div>
+
+	</td>
+
+	<td colspan=2 class="single" style="height: 30px; background: #003f00;">
+
+		<div class="button"><span><a href="http://soklos-ohotnik.narod.ru/contest.html" target="contentframe" id="button">ИСПЫТАНИЯ</a></span></div>
+
+		<!-- <div class="button"><span><a href="http://groups.google.com/group/soklos" target="_blank" id="button" style="color: yellow;">ФОРУМ</a></span></div> -->
+
+		<div class="button"><span><a href="http://soklos-ohotnik.narod.ru/presentation.html" target="contentframe" id="button">ВЫСТАВКИ</a></span></div>
+
+		<div class="button"><span><a href="http://soklos-ohotnik.narod.ru/photo.html" target="contentframe" id="button">ФОТО</a></span></div>
+
+		<div class="button"><span><a href="http://soklos-ohotnik.narod.ru/memo.html" target="contentframe" id="button">СТАТЬИ</a></span></div>
+
+	</td>
+
+</tr>
+
+<tr>
+
+	<td colspan=2 class="single" style="height: 8px; background:url('img/dn_bar_left.png') no-repeat center;"></td>
+
+	<td colspan=2 class="single" style="height: 8px; background:url('img/dn_bar_right.png') no-repeat center;"></td>
+
+</tr>
+
+<tr>
+
+	<td colspan="5" height="100%">
+
+	<iframe id="contentframe" name="contentframe" src="http://soklos-ohotnik.narod.ru/home.html" width="100%" height="100%" frameborder="0" scrolling="auto" sandbox="allow-forms allow-same-origin allow-top-navigation allow-pointer-lock allow-popups"></iframe>
+
+	</td>
+
+</tr>
+
+<tr>
+
+	<td colspan=5 class="down"></td>
+
+</tr>
+
+
+
+
+
+</table>
+
+</body>
+
+</html>
