--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 
 <tr>
 
-	<td colspan=2 class="topcorner" style="color: #00ab00; background:url('img/bb_left.png') no-repeat center;">Саратовский Областной Клуб</td>
+	<td colspan=2 class="topcorner" style="color: #00ab00; background:url('http://soklos-ohotnik.narod.ru/img/bb_left.png') no-repeat center;">Саратовский Областной Клуб</td>
 
 	<td rowspan=5 class="logo"><a href="/"><img src="http://soklos-ohotnik.narod.ru/img/logo.jpg" border="0" alt="logo, go to main page"></a></td>
 
-	<td colspan=2 class="topcorner" style="color: #00ab00; background:url('img/bb_right.png') no-repeat center;">Любителей Охотничьих Собак</td>
+	<td colspan=2 class="topcorner" style="color: #00ab00; background:url('http://soklos-ohotnik.narod.ru/img/bb_right.png') no-repeat center;">Любителей Охотничьих Собак</td>
 
 </tr>
 
 <tr>
 
-	<td colspan=2 class="single" style="height: 104px; background:url('img/left_bg.jpg') no-repeat center;"></td>
+	<td colspan=2 class="single" style="height: 104px; background:url('http://soklos-ohotnik.narod.ru/img/left_bg.jpg') no-repeat center;"></td>
 
-	<td colspan=2 class="single" style="height: 104px; background:url('img/right_bg.jpg') no-repeat center;"></td>
+	<td colspan=2 class="single" style="height: 104px; background:url('http://soklos-ohotnik.narod.ru/img/right_bg.jpg') no-repeat center;"></td>
 
 </tr>
 
 <tr>
 
-	<td colspan=2 class="single" style="height: 20px; background:url('img/bb_left.png') no-repeat center;"></td>
+	<td colspan=2 class="single" style="height: 20px; background:url('http://soklos-ohotnik.narod.ru/img/bb_left.png') no-repeat center;"></td>
 
-	<td colspan=2 class="single" style="height: 20px; background:url('img/bb_right.png') no-repeat center;"></td>
+	<td colspan=2 class="single" style="height: 20px; background:url('http://soklos-ohotnik.narod.ru/img/bb_right.png') no-repeat center;"></td>
 
 </tr>
 
@@ -81,9 +81,9 @@
 
 <tr>
 
-	<td colspan=2 class="single" style="height: 8px; background:url('img/dn_bar_left.png') no-repeat center;"></td>
+	<td colspan=2 class="single" style="height: 8px; background:url('http://soklos-ohotnik.narod.ru/img/dn_bar_left.png') no-repeat center;"></td>
 
-	<td colspan=2 class="single" style="height: 8px; background:url('img/dn_bar_right.png') no-repeat center;"></td>
+	<td colspan=2 class="single" style="height: 8px; background:url('http://soklos-ohotnik.narod.ru/img/dn_bar_right.png') no-repeat center;"></td>
 
 </tr>
 
